--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2817,7 +2817,7 @@ textarea.form-control {
 }
 .blog-section .video-content .video-image {
   overflow: hidden;
-  background: url("../images/video.jpg") no-repeat center;
+  background: url("../images/fashion05.png") no-repeat center;
   height: 100%;
 }
 .blog-section .video-content .video-image img {
